<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background_login">
    <!-- padding 内边距   layout_margin 外边距
        android:layout_alignParentTop 布局的位置是否处于顶部 -->

    <RelativeLayout
        android:id="@+id/login_div"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="15dip"
        android:layout_margin="15dip"
        android:background="@drawable/background_login_div" >
        <!-- 账号 -->
        <TextView
            android:id="@+id/register_user_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="5dp"
            android:text="@string/register_label_username" />
        <EditText
            android:id="@+id/register_username_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/register_user_input"
            android:hint="@string/register_username_hint"
            android:inputType="text"
            style="@style/normalText"/>
        <!-- 密码 text -->
        <TextView
            android:id="@+id/register_password_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/register_username_edit"
            android:layout_marginTop="3dp"
            android:text="@string/register_label_password" />
        <EditText
            android:id="@+id/register_password_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/register_password_input"
            android:hint="@string/register_password_hint"
            android:inputType="textPassword"
            style="@style/normalText"/>
        <!--确认密码-->
        <TextView
            android:id="@+id/register_confirm_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/register_password_edit"
            android:layout_marginTop="3dp"
            android:text="@string/register_label_confirm" />
        <EditText
            android:id="@+id/register_confirm_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/register_confirm_input"
            android:singleLine="true"
            android:inputType="textPassword"
            style="@style/normalText"/>
        <!--手机号-->
        <TextView
            android:id="@+id/register_phone_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/register_confirm_edit"
            android:layout_marginTop="3dp"
            android:text="@string/register_label_phone" />
        <EditText
            android:id="@+id/register_phone_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_phone_hint"
            android:layout_below="@+id/register_phone_input"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            style="@style/normalText"/>
        <!-- 注册button -->
        <Button
            android:id="@+id/register_button"
            android:onClick="login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/register_phone_edit"
            android:layout_alignRight="@id/register_phone_edit"
            android:text="@string/register_label_register"
            android:background="@drawable/blue_button" />
    </RelativeLayout>

</LinearLayout>