<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="MissingPrefix">

    <TextView
        android:id="@+id/recent_up_text"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/blue"
        android:text="最近"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:gravity="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/recent_up_text"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="@dimen/arrow_height"
                android:layout_height="@dimen/arrow_width"
                android:scaleType="centerInside"
                android:onClick="decmonth"
                android:src="@drawable/arrow_rotate"/>
            <TextView
                android:id="@+id/recent_infor_top_month"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:drawablePadding="3dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/recent_label_size"
                android:gravity="center"
                />
            <ImageView
                android:layout_width="@dimen/arrow_height"
                android:layout_height="@dimen/arrow_width"
                android:scaleType="centerInside"
                android:onClick="incmonth"
                android:src="@drawable/hui_discount_item_rule_arrow"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/darker_gray" />

        <!--<lecho.lib.hellocharts.view.ColumnChartView-->
            <!--android:id="@+id/chart_bottom"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="200dp">-->

        <!--</lecho.lib.hellocharts.view.ColumnChartView>-->
        <lecho.lib.hellocharts.view.LineChartView
            android:id="@+id/chart_bottom"
            android:layout_width="match_parent"
            android:layout_height="200dp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/darker_gray" />

        <android.support.v7.widget.GridLayout
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/Grid"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:columnCount="2"
            app:rowCount="4">

            <TextView
                android:id="@+id/recent_infor_date_tv"
                android:gravity="center|bottom"
                android:text="@string/recent_infor_date_label"
                app:layout_column="0"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1"
                app:layout_row="0" />

            <TextView
                android:id="@+id/recent_infor_date_data"
                app:layout_column="0"
                app:layout_row="1"
                android:gravity="center|top"
                android:text="1234"
                android:textSize="@dimen/recent_data_size"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1"/>

            <TextView
                android:id="@+id/recent_infor_step_tv"
                android:text="@string/recent_infor_step_label"
                android:gravity="center|bottom"
                app:layout_column="1"
                app:layout_row="0"

                app:layout_columnWeight="1"
                app:layout_rowWeight="1"/>

            <TextView
                android:id="@+id/recent_infor_step_data"
                app:layout_column="1"
                app:layout_row="1"
                android:gravity="center|top"
                android:text="1234"
                android:textSize="@dimen/recent_data_size"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1"/>

            <TextView
                android:id="@+id/recent_infor_length_tv"

                android:text="@string/recent_infor_length_label"
                android:gravity="center|bottom"
                app:layout_column="0"
                app:layout_row="2"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1"/>

            <TextView
                android:id="@+id/recent_infor_length_data"
                app:layout_column="0"
                app:layout_row="3"
                android:gravity="center|top"
                android:text="1234"
                android:textSize="@dimen/recent_data_size"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1"/>

            <TextView
                android:id="@+id/recent_infor_calorie_tv"

                android:text="@string/recent_infor_calorie_label"
                android:gravity="center|bottom"
                app:layout_column="1"
                app:layout_row="2"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1"/>

            <TextView
                android:id="@+id/recent_infor_calorie_data"
                app:layout_column="1"
                app:layout_row="3"
                android:gravity="center|top"
                android:text="1234"
                android:textSize="@dimen/recent_data_size"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1"/>
        </android.support.v7.widget.GridLayout>


    </LinearLayout>
</RelativeLayout>